<resources>
    <string name="app_name">Maths Mate</string>
    <string name="welcome">Welcome to Maths Mate</string>
    <string name="tournament">Tournament</string>
    <string name="freestyle">Freestyle</string>
    <string name="settings">Settings</string>
    <string name="click_to_begin">Click to Begin!</string>
    <string name="next">Next</string>
    <string name="back">Back</string>

    <string name="addition">Addition</string>
    <string name="timestables">Random Times Tables</string>
    <string name="timestables_tor">Master Times Tables</string>
    <string name="addsubmuldiv">Random Arithmetic</string>
    <string name="tor_addsubmuldiv">Master Arithmetic</string>
    <string name="tor_timestables">Master Timestables</string>
    <string name="addition_symbol">\u0020\u0020+\u0020\u0020</string>
    <string name="subtraction_symbol">\u0020\u0020-\u0020\u0020</string>
    <string name="multiplication_symbol">\u0020\u0020\u00D7\u0020\u0020</string>
    <string name="division_symbol">\u0020\u0020\u00F7\u0020\u0020</string>
    <string name="equals_symbol">\u0020\u0020=\u0020\u0020</string>

    <string name="equation_mask">%1$s%2$s</string>
    <string name="status_input">Enter Answer</string>
    <string name="status_fail">Incorrect</string>
    <string name="status_pass">Correct</string>
    <string name="status_complete">Complete!</string>
    <string name="time_taken">Completed in %1$s</string>

    <string name="settings_save">Save</string>
    <string name="settings_saved">Settings Saved</string>
    <string name="settings_timestables">Times Tables Settings</string>
    <string name="settings_addsubmuldiv">Random Arithmetic Settings</string>
    <string name="settings_eq_count">Number of Equations</string>
    <string name="settings_op_count">Number of Operands</string>
    <string name="settings_range_high_count">Operand Range High</string>
    <string name="settings_range_low_count">Operand Range Low</string>
    <string name="settings_x_range_high_count">X Operand Range High</string>
    <string name="settings_x_range_low_count">X Operand Range Low</string>
    <string name="settings_y_range_high_count">Y Operand Range High</string>
    <string name="settings_y_range_low_count">Y Operand Range Low</string>
    <string name="settings_add">Enable Addition?</string>
    <string name="settings_sub">Enable Subtraction?</string>
    <string name="settings_mul">Enable Multiplication?</string>
    <string name="settings_div">Enable Division?</string>
    <string name="settings_tor_addsubmuldiv">Tournament Arithmetic Settings</string>
    <string name="settings_tor_timestables">Timestables Arithmetic Settings</string>
    <string name="settings_tor_clear">Clear Progress?</string>
    <string name="settings_tor_clear_confirm">Clear</string>
    <string name="settings_range">Equation Range</string>
    <string name="settings_random">Random Order?</string>
    <string name="settings_true">True</string>
    <string name="settings_false">False</string>
    <string name="tick">\u2713</string>
    <string name="cross">\u274C</string>

    <string name="tor_ttes_level_1">1x Timetables</string>
    <string name="tor_ttes_level_2">2x Timetables</string>
    <string name="tor_ttes_level_3">3x Timetables</string>
    <string name="tor_ttes_level_4">4x Timetables</string>
    <string name="tor_ttes_level_5">5x Timetables</string>
    <string name="tor_ttes_level_6">6x Timetables</string>
    <string name="tor_ttes_level_7">7x Timetables</string>
    <string name="tor_ttes_level_8">8x Timetables</string>
    <string name="tor_ttes_level_9">9x Timetables</string>

    <string name="tor_asmd_level_1">Easy Addition</string>
    <string name="tor_asmd_level_2">Easy Subtraction</string>
    <string name="tor_asmd_level_3">Medium Addition</string>
    <string name="tor_asmd_level_4">Medium Subtraction</string>
    <string name="tor_asmd_level_5">Easy Multiplication</string>
    <string name="tor_asmd_level_6">Medium Multiplication</string>
    <string name="tor_asmd_level_7">Division Easy</string>
    <string name="tor_asmd_level_8">Division Medium</string>
    <string name="tor_asmd_level_9">Mix Medium</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
</resources>
