<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <TextView
        style="@style/Header1"
        android:id="@+id/tvEquation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="test"/>

    <TextView
        style="@style/Header2"
        android:id="@+id/tvStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="test"/>

    <GridLayout
        style="@style/Keypad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            style="@style/Keypad"
            android:id="@+id/btnOne"
            android:layout_column="1"
            android:layout_row="1"
            android:text="@string/one"/>

        <Button
            style="@style/Keypad"
            android:id="@+id/btnTwo"
            android:layout_column="2"
            android:layout_row="1"
            android:text="@string/two"/>

        <Button
            style="@style/Keypad"
            android:id="@+id/btnThree"
            android:layout_column="3"
            android:layout_row="1"
            android:text="@string/three"/>

        <Button
            style="@style/Keypad"
            android:id="@+id/btnFour"
            android:layout_column="1"
            android:layout_row="2"
            android:text="@string/four"/>

        <Button
            style="@style/Keypad"
            android:id="@+id/btnFive"
            android:layout_column="2"
            android:layout_row="2"
            android:text="@string/five"/>

        <Button
            style="@style/Keypad"
            android:id="@+id/btnSix"
            android:layout_column="3"
            android:layout_row="2"
            android:text="@string/six"/>

        <Button
            style="@style/Keypad"
            android:id="@+id/btnSeven"
            android:layout_column="1"
            android:layout_row="3"
            android:text="@string/seven"/>

        <Button
            style="@style/Keypad"
            android:id="@+id/btnEight"
            android:layout_column="2"
            android:layout_row="3"
            android:text="@string/eight"/>

        <Button
            style="@style/Keypad"
            android:id="@+id/btnNine"
            android:layout_column="3"
            android:layout_row="3"
            android:text="@string/nine"/>

        <Button
            style="@style/Keypad"
            android:id="@+id/btnZero"
            android:layout_column="2"
            android:layout_row="4"
            android:text="@string/zero"/>
    </GridLayout>

</LinearLayout>