<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center_horizontal">

    <ProgressBar
        android:id="@+id/prgTotal"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:paddingVertical="40dp"
        android:max="9"
        android:progress="0"
        android:indeterminate="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prgTotal">

        <ProgressBar
            android:id="@+id/prgLevel1"
            style="?android:attr/progressBarStyleHorizontal"
            android:paddingHorizontal="10dp"
            android:layout_gravity="center"
            android:layout_width="115dp"
            android:layout_column="0"
            android:layout_row="0"
            android:max="1"
            android:progress="0"
            android:indeterminate="false"/>

        <Button
            android:id="@+id/btnLevel1"
            style="@style/Paragraph3"
            android:paddingHorizontal="10dp"
            android:layout_gravity="center"
            android:layout_width="115dp"
            android:gravity="center"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/tor_asmd_level_1"
            android:onClick="startAddEasy"/>

        <ProgressBar
            android:id="@+id/prgLevel2"
            style="?android:attr/progressBarStyleHorizontal"
            android:paddingHorizontal="10dp"
            android:layout_gravity="center"
            android:layout_width="115dp"
            android:gravity="center"
            android:layout_column="1"
            android:layout_row="0"
            android:max="1"
            android:progress="0"
            android:indeterminate="false"/>

        <Button
            android:id="@+id/btnLevel2"
            style="@style/Paragraph3"
            android:paddingHorizontal="10dp"
            android:layout_gravity="center"
            android:layout_width="115dp"
            android:gravity="center"
            android:layout_column="1"
            android:layout_row="1"
            android:text="@string/tor_asmd_level_2"
            android:onClick="startSubEasy"/>

        <ProgressBar
            android:id="@+id/prgLevel3"
            style="?android:attr/progressBarStyleHorizontal"
            android:paddingHorizontal="10dp"
            android:layout_gravity="center"
            android:layout_width="115dp"
            android:gravity="center"
            android:layout_column="2"
            android:layout_row="0"
            android:max="1"
            android:progress="0"
            android:indeterminate="false"/>

        <Button
            android:id="@+id/tvLevel3"
            style="@style/Paragraph3"
            android:paddingHorizontal="10dp"
            android:layout_gravity="center"
            android:layout_width="115dp"
            android:gravity="center"
            android:layout_column="2"
            android:layout_row="1"
            android:text="@string/tor_asmd_level_3"
            android:onClick="startAddMedium"/>

        <ProgressBar
            android:id="@+id/prgLevel4"
            style="?android:attr/progressBarStyleHorizontal"
            android:paddingTop="40dp"
            android:paddingHorizontal="10dp"
            android:layout_gravity="center"
            android:layout_width="115dp"
            android:layout_column="0"
            android:layout_row="2"
            android:max="1"
            android:progress="0"
            android:indeterminate="false"/>

        <Button
            android:id="@+id/tvLevel4"
            style="@style/Paragraph3"
            android:paddingHorizontal="10dp"
            android:layout_gravity="center"
            android:layout_width="115dp"
            android:gravity="center"
            android:layout_column="0"
            android:layout_row="3"
            android:text="@string/tor_asmd_level_4"
            android:onClick="startSubMedium"/>

        <ProgressBar
            android:id="@+id/prgLevel5"
            style="?android:attr/progressBarStyleHorizontal"
            android:paddingTop="40dp"
            android:layout_gravity="center"
            android:layout_width="115dp"
            android:gravity="center"
            android:layout_column="1"
            android:layout_row="2"
            android:max="1"
            android:progress="0"
            android:indeterminate="false"/>

        <Button
            android:id="@+id/tvLevel5"
            style="@style/Paragraph3"
            android:paddingHorizontal="10dp"
            android:layout_gravity="center"
            android:layout_width="115dp"
            android:gravity="center"
            android:layout_column="1"
            android:layout_row="3"
            android:text="@string/tor_asmd_level_5"
            android:onClick="startMulEasy"/>

        <ProgressBar
            android:id="@+id/prgLevel6"
            style="?android:attr/progressBarStyleHorizontal"
            android:paddingTop="40dp"
            android:paddingHorizontal="10dp"
            android:layout_gravity="center"
            android:layout_width="115dp"
            android:gravity="center"
            android:layout_column="2"
            android:layout_row="2"
            android:max="1"
            android:progress="0"
            android:indeterminate="false"/>

        <Button
            android:id="@+id/tvLevel6"
            style="@style/Paragraph3"
            android:paddingHorizontal="10dp"
            android:layout_gravity="center"
            android:layout_width="115dp"
            android:gravity="center"
            android:layout_column="2"
            android:layout_row="3"
            android:text="@string/tor_asmd_level_6"
            android:onClick="startMulMedium"/>

        <ProgressBar
            android:id="@+id/prgLevel7"
            style="?android:attr/progressBarStyleHorizontal"
            android:paddingTop="40dp"
            android:paddingHorizontal="10dp"
            android:layout_gravity="center"
            android:layout_width="115dp"
            android:layout_column="0"
            android:layout_row="4"
            android:max="1"
            android:progress="0"
            android:indeterminate="false"/>

        <Button
            android:id="@+id/tvLevel7"
            style="@style/Paragraph3"
            android:paddingHorizontal="10dp"
            android:layout_gravity="center"
            android:layout_width="115dp"
            android:gravity="center"
            android:layout_column="0"
            android:layout_row="5"
            android:text="@string/tor_asmd_level_7"
            android:onClick="startDivEasy"/>

        <ProgressBar
            android:id="@+id/prgLevel8"
            style="?android:attr/progressBarStyleHorizontal"
            android:paddingTop="40dp"
            android:paddingHorizontal="10dp"
            android:layout_gravity="center"
            android:layout_width="115dp"
            android:gravity="center"
            android:layout_column="1"
            android:layout_row="4"
            android:max="1"
            android:progress="0"
            android:indeterminate="false"/>

        <Button
            android:id="@+id/tvLevel8"
            style="@style/Paragraph3"
            android:paddingHorizontal="10dp"
            android:layout_gravity="center"
            android:layout_width="115dp"
            android:gravity="center"
            android:layout_column="1"
            android:layout_row="5"
            android:text="@string/tor_asmd_level_8"
            android:onClick="startDivMedium"/>

        <ProgressBar
            android:id="@+id/prgLevel9"
            style="?android:attr/progressBarStyleHorizontal"
            android:paddingTop="40dp"
            android:paddingHorizontal="10dp"
            android:layout_gravity="center"
            android:layout_width="115dp"
            android:gravity="center"
            android:layout_column="2"
            android:layout_row="4"
            android:max="1"
            android:progress="0"
            android:indeterminate="false"/>

        <Button
            android:id="@+id/tvLevel9"
            style="@style/Paragraph3"
            android:paddingHorizontal="10dp"
            android:layout_gravity="center"
            android:layout_width="115dp"
            android:gravity="center"
            android:layout_column="2"
            android:layout_row="5"
            android:text="@string/tor_asmd_level_9"
            android:onClick="startMixMedium"/>

    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>