<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal">

    <TextView
        style="@style/Paragraph2"
        android:id="@+id/tvTteEqRangeHigh"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_column="0"
        android:layout_row="0"
        android:padding="10dp"
        android:gravity="center_vertical"
        android:text="@string/settings_range_high_count"/><!-- Not Happy about using marginTop, but unable to get appConstraint setting to work as desired-->

    <SeekBar
        style="@style/Paragraph2"
        android:id="@+id/sbTteEqRangeHigh"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_row="0"
        android:layout_column="1"
        android:gravity="center_vertical"
        android:padding="10dp" /><!-- Not Happy about using marginTop, but unable to get appConstraint setting to work as desired-->

    <TextView
        style="@style/Paragraph2"
        android:id="@+id/tvTteEqRangeHighVal"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_row="0"
        android:layout_marginTop="50dp"
        android:padding="10dp"
        android:gravity="center_vertical" />

    <TextView
        style="@style/Paragraph2"
        android:id="@+id/tvTteEqRangeLow"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:padding="10dp"
        android:gravity="center_vertical"
        android:text="@string/settings_range_low_count"/>

    <SeekBar
        style="@style/Paragraph2"
        android:id="@+id/sbTteEqRangeLow"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:gravity="center_vertical"
        android:padding="10dp" />

    <TextView
        style="@style/Paragraph2"
        android:id="@+id/tvTteEqRangeLowVal"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_row="1"
        android:padding="10dp"
        android:gravity="center_vertical" />

    <TextView
        style="@style/Paragraph2"
        android:id="@+id/tvTteRandom"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="2"
        android:padding="10dp"
        android:gravity="center_vertical"
        android:text="@string/settings_random"/>

    <SeekBar
        style="@style/Paragraph2"
        android:id="@+id/sbTteRandom"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:gravity="center_vertical"
        android:padding="10dp" />

    <TextView
        style="@style/Paragraph2"
        android:id="@+id/tvTteRandomVal"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_row="2"
        android:padding="10dp"
        android:gravity="center_vertical" />

</GridLayout>